fix: scroll overflowing pre tags

--- a/public/styles.css
+++ b/public/styles.css
@@ -10,6 +10,10 @@ body {
   box-sizing: inherit;
 }
 
+pre {
+  overflow-x: auto;
+}
+
 table td,
 table td * {
   vertical-align: top;
